sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: reassignment to val
		case p if(getValeur(p) < getValeur(p-1)) => {echange(p-1,p); p = p-1}
                                                                               ^